# Alexbot

./: README.md
mujoco_simulation/sim_cpp/: CMakeLists.txt
mujoco_simulation/sim_cpp/inc/: robot_dynamics.h  robot_sim.h
mujoco_simulation/sim_cpp/src/: main.cpp  robot_dynamics.cpp  robot_sim.cpp
ros_ws/src/alexbot_description/: CMakeLists.txt  package.xml
ros_ws/src/alexbot_description/launch/: display.launch.py
ros_ws/src/alexbot_description/urdf/: alexbot.urdf  alexbot.xml  alexbot_scene.xml  leftlink1.STL  rightlink3.STL
ros_ws/src/alexbot_description/urdf/base_link_parts/: assets.xml  base_link_0.stl  base_link_14.stl  base_link_19.stl  base_link_2.stl  base_link_21.stl  base_link_25.stl  base_link_26.stl  base_link_27.stl  base_link_29.stl  base_link_30.stl  base_link_31.stl  base_link_33.stl  base_link_35.stl  base_link_38.stl  base_link_40.stl  base_link_49.stl  base_link_5.stl  base_link_54.stl  base_link_56.stl  base_link_57.stl  base_link_6.stl  base_link_61.stl  base_link_62.stl  base_link_63.stl  base_link_8.stl  convex_12.stl  convex_17.stl  convex_2.stl  convex_20.stl  convex_22.stl  convex_33.stl  convex_34.stl  convex_37.stl  convex_39.stl  convex_46.stl  convex_48.stl  convex_5.stl  convex_51.stl  convex_55.stl  (+3 more)
ros_ws/src/alexbot_description/urdf/leftlink1_parts/: assets.xml  convex_0.stl  convex_1.stl  convex_10.stl  convex_12.stl  convex_13.stl  convex_14.stl  convex_15.stl  convex_17.stl  convex_18.stl  convex_2.stl  convex_20.stl  convex_22.stl  convex_23.stl  convex_24.stl  convex_25.stl  convex_26.stl  convex_27.stl  convex_28.stl  convex_29.stl  convex_3.stl  convex_30.stl  convex_31.stl  convex_32.stl  convex_33.stl  (+80 more)
(+148 files in other folders)
