<?xml version="1.0"?>
<package format="3">
  <name>alexbot_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for alexbot_description.
    This package contains configuration data, 3D models and launch files for alexbot_description robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <author>TODO</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- 如果需要 launch 文件支持 -->
  <exec_depend>launch</exec_depend>

  <!-- 如果使用 URDF/Xacro -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

